--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==1.12.0
 altair==6.0.0
 attrs==25.4.0
 blinker==1.9.0
@@ -39,6 +40,7 @@ packaging==25.0
 pandas==2.3.3
 pillow==12.0.0
 protobuf==6.33.2
+psutil==7.2.1
 pyarrow==22.0.0
 pydeck==0.9.1
 python-dateutil==2.9.0.post0
